instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: type Blue is not a member of object java.awt.Color
setCouleurBrosse(c:Color.Blue)
                         ^InstructionsDrawG:1: error: not found: value c
setCouleurBrosse(c:Color.Blue)
                 ^