instructions.InstructionsDrawG.scala.code
setCouleurBrosse(c:Color.Blue)
baisseBrosse()
//Premier trait
gauche()
avance()
avance()
avance()
avance()
//Deuxième trait
gauche()
avance()
avance()
avance()
avance()
//Troisième trait
gauche()
avance()
avance()
avance()
avance()
//Quatrième trait
gauche()
avance()
avance()
//Cinquième trait
gauche()
avance()